# rektproof

./: .env.example  .gitignore  .rektproof.toml  .vercelignore  AUDIT_REPORT.md  Anchor.toml  BENCHMARKS.md  BRUTALLY_HONEST_AUDIT.md  CODEBASE_AUDIT_REPORT.md  Cargo.toml  DETECTOR_FIX_REPORT.md  Dockerfile  FINDING_VERIFICATION_REPORT.md  LICENSE  LIVE_AUDIT_RESULTS.md  PRODUCTION_UPGRADE_PLAN.md  README.md  SHANON_COMPLETION_PLAN.md  VERIFICATION_REPORT.md  benchmark_precision_recall.py  deploy.sh  docker-compose.yml  findings.js  formal-verification.js  fuzzing.js  index.html  marinade-economic-verify.json  marinade-false-positive-analysis.md  marinade-fuzz.json  marinade-guard.json  marinade-liquid-staking-scan.md  marinade-scan-FIXED.json  marinade-scan-full.json  marinade-scan-human.txt  marinade-scan-report.md  marinade-scan.sarif.json  marinade-score.json  marinade-verify-formal.json  monitoring.js  netlify.toml  (+7 more)
.cargo/: tarpaulin.toml
crates/ai/ai-enhancer/: Cargo.toml
crates/compliance-reporter/: Cargo.toml
crates/core/program-analyzer/: Cargo.toml  test_output.txt  tree_output.txt
crates/experimental/crux-mir-analyzer/: Cargo.toml
crates/experimental/fv-layer2-verifier/: Cargo.toml
crates/experimental/fv-scanner-core/: Cargo.toml
crates/experimental/integration-orchestrator/: Cargo.toml
crates/fv-layer3-verifier/: Cargo.toml
crates/fv-layer3-verifier/src/: lib.rs
crates/fv-web-server/: Cargo.toml
crates/fv-web-server/src/: main.rs
crates/infra/proktor-api/: Cargo.toml
crates/infra/proktor-cli/: Cargo.toml
crates/infra/proktor-lsp/: Cargo.toml
crates/infra/shanon-api/: Cargo.toml
crates/infra/shanon-cli/: Cargo.toml
crates/infra/shanon-guard/: Cargo.toml
crates/infra/shanon-lsp/: Cargo.toml
crates/infra/shanon-monitor/: Cargo.toml
crates/infra/shanon-verify/: Cargo.toml
crates/program-analyzer/: Cargo.toml
crates/program-analyzer/benches/: response_time.rs
crates/program-analyzer/src/: abstract_interp.rs  account_aliasing.rs  anchor_extractor.rs  ast_checks.rs  ast_to_z3.rs  cegar.rs  cfg_analyzer.rs  compositional_verify.rs  converters.rs  deep_ast_scanner.rs  e2e_tests.rs  finding_validator.rs  information_flow_types.rs  lib.rs  octagon_domain.rs  phase_timing.rs  pipeline.rs  rektproof_config.rs  security.rs  separation_logic.rs  solana_bmc.rs  taint_lattice.rs  vuln_knowledge_base.rs  vuln_registry.rs  vulnerability_db.rs
crates/program-analyzer/tests/: accuracy_benchmarks.rs
crates/shanon-cli/: Cargo.toml
crates/shanon-cli/src/: dashboard.rs  main.rs  tui.rs
crates/verification/bmc-verifier/: Cargo.toml
crates/verification/cegar-verifier/: Cargo.toml
crates/verification/fv-layer1-verifier/: Cargo.toml
crates/verification/fv-layer3-verifier/: Cargo.toml
crates/verification/fv-layer4-verifier/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/tests/: analyzer_regression.rs  full_pipeline.rs
programs/proktor-oracle/: Cargo.toml  proktor-oracle-keypair.json
programs/proktor-oracle/src/: lib.rs
programs/shanon-oracle/: Cargo.toml
programs/shanon-oracle/src/: lib.rs
programs/vulnerable-vault/: Cargo.toml
programs/vulnerable-vault/kani_proofs/: proof_create_user_account_balance_conservation.rs  proof_derive_pda_pda_validation.rs  proof_handle_deposit_arithmetic_safety.rs  proof_handle_deposit_balance_conservation.rs  proof_handle_get_secure_price_access_control.rs  proof_handle_swap_arithmetic_safety.rs  proof_handle_swap_balance_conservation.rs  proof_handle_vote_on_proposal_arithmetic_safety.rs  proof_handle_withdraw_access_control.rs  proof_handle_withdraw_arithmetic_safety.rs  proof_handle_withdraw_balance_conservation.rs  proof_proof_createuseraccount_constraint_0_pda_validation.rs  proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation.rs  proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation.rs  proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_pda_validation.rs  proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_bump_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_bump_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_bump_pda_validation_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_bump_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_bump_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_createuseraccount_constraint_0_pda_validation_pda_validation_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_derive_pda_pda_validation_bump_pda_validation_bump_pda_validation_bump_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_derive_pda_pda_validation_bump_pda_validation_bump_pda_validation_bump_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_derive_pda_pda_validation_bump_pda_validation_bump_pda_validation_pda_validation_bump_pda_validation.rs  proof_proof_proof_proof_proof_derive_pda_pda_validation_bump_pda_validation_bump_pda_validation_pda_validation_pda_validation.rs  proof_proof_proof_proof_proof_derive_pda_pda_validation_bump_pda_validation_pda_validation_bump_pda_validation_bump_pda_validation.rs  (+68 more)
(+714 files in other folders)
