[workspace]
resolver = "2"

members = [
    # ── Production (the actual product) ──────────────────────────────
    "crates/shanon-cli",
    "crates/shanon-api",
    "crates/program-analyzer",
    "crates/shanon-guard",
    "crates/shanon-monitor",
    "crates/shanon-verify",
    "crates/shanon-lsp",
    "crates/token-security-expert",
    "crates/firedancer-monitor",
    "crates/cpi-analyzer",
    "crates/ai-enhancer",
    "crates/compliance-reporter",

    # ── Solana Programs ──────────────────────────────────────────────
    "programs/shanon-oracle",
    "programs/vulnerable-vault",
    "programs/vulnerable-token",
    "programs/vulnerable-staking",

    # ── Tests ────────────────────────────────────────────────────────
    "exploits",
    "integration-tests",

    # ── Analysis engine dependencies (used by shanon-cli + program-analyzer) ──
    # These crates are imported and called from production binaries.
    "crates/experimental/kani-verifier",
    "crates/experimental/certora-prover",
    "crates/experimental/wacana-analyzer",
    "crates/experimental/symbolic-engine",
    "crates/experimental/sec3-analyzer",
    "crates/experimental/anchor-security-analyzer",
    "crates/experimental/trident-fuzzer",
    "crates/experimental/dataflow-analyzer",
    "crates/experimental/taint-analyzer",
    "crates/experimental/l3x-analyzer",
    "crates/experimental/geiger-analyzer",
    "crates/experimental/economic-verifier",
    "crates/experimental/fuzzdelsol",
    "crates/experimental/attack-simulator",
    "crates/experimental/llm-strategist",
    "crates/experimental/concolic-executor",
    "crates/experimental/consensus-engine",
    "crates/experimental/account-security-expert",
    "crates/experimental/arithmetic-security-expert",
    "crates/experimental/defi-security-expert",
    "crates/experimental/secure-code-gen",
    "crates/experimental/benchmark-suite",
    "crates/experimental/integration-orchestrator",
    "crates/experimental/crux-mir-analyzer",
    "crates/experimental/git-scanner",
    "crates/experimental/security-fuzzer",
    "crates/experimental/invariant-miner",
    "crates/experimental/transaction-forge",

    # ── Formal Verification pipeline (used by shanon-cli verify-formal) ──
    "crates/experimental/fv-layer1-verifier",
    "crates/experimental/fv-layer2-verifier",
    "crates/experimental/fv-layer3-verifier",
    "crates/experimental/fv-layer4-verifier",
    "crates/experimental/fv-scanner-core",
]

# Default build: only production crates (fast iteration, honest scope)
default-members = [
    "crates/shanon-cli",
    "crates/shanon-api",
    "crates/program-analyzer",
    "crates/shanon-guard",
    "crates/shanon-monitor",
    "crates/shanon-verify",
    "crates/shanon-lsp",
    "crates/token-security-expert",
    "crates/firedancer-monitor",
    "crates/cpi-analyzer",
    "crates/ai-enhancer",
    "crates/compliance-reporter",
    "programs/shanon-oracle",
    "programs/vulnerable-vault",
    "programs/vulnerable-token",
    "programs/vulnerable-staking",
    "exploits",
    "integration-tests",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Antigravity <agent@solana-security.com>"]

[workspace.lints.rust]
# Anchor macros inject cfg values (anchor-debug, solana, no-idl, etc.) that
# rustc doesn't recognise — suppress these warnings workspace-wide.
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(anchor_debug)',
    'cfg(solana)',
    'cfg(no_idl)',
    'cfg(no_log_ix_name)',
    'cfg(custom_heap)',
    'cfg(custom_panic)',
] }

[workspace.dependencies]
# Solana & Anchor
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
solana-sdk = "1.18"
# NOTE: solana-client v1.18.x triggers a future-incompatibility warning about
# never type fallback. Newer versions (2.x/3.x) exist but require a full Solana
# SDK migration (breaking API changes). This is a known upstream issue:
# https://github.com/solana-labs/solana — tracked via `cargo report future-incompatibilities`
solana-client = "1.18"
solana-program = "1.18"
solana-program-test = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Symbolic Execution
# z3 = { version = "0.12", features = ["static-link-z3"] }

# Rust Parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
walkdir = "2.4"
bs58 = "0.5"
sha2 = "0.10"
tera = "1.19"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
log = "0.4"
strsim = "0.11"
toml = "0.8"
semver = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Web framework
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
env_logger = "0.10"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true
