[workspace]
resolver = "2"

members = [
    # ── Core Engine ──────────────────────────────────────────────────
    "crates/core/program-analyzer",

    # ── Analyzers ────────────────────────────────────────────────────
    "crates/analyzers/anchor-security-analyzer",
    "crates/analyzers/cpi-analyzer",
    "crates/analyzers/dataflow-analyzer",
    "crates/analyzers/geiger-analyzer",
    "crates/analyzers/l3x-analyzer",
    "crates/analyzers/sec3-analyzer",
    "crates/analyzers/symbolic-engine",
    "crates/analyzers/concolic-executor",
    "crates/analyzers/taint-analyzer",
    "crates/analyzers/wacana-analyzer",

    # ── Domain Experts ───────────────────────────────────────────────
    "crates/experts/account-security-expert",
    "crates/experts/arithmetic-security-expert",
    "crates/experts/defi-security-expert",
    "crates/experts/token-security-expert",

    # ── Formal Verification ──────────────────────────────────────────
    "crates/verification/fv-scanner-core",
    "crates/verification/fv-layer1-verifier",
    "crates/verification/fv-layer2-verifier",
    "crates/verification/fv-layer3-verifier",
    "crates/verification/fv-layer4-verifier",
    "crates/verification/kani-verifier",
    "crates/verification/certora-prover",
    "crates/verification/crux-mir-analyzer",
    "crates/verification/invariant-miner",
    "crates/verification/economic-verifier",

    # ── Fuzzing ──────────────────────────────────────────────────────
    "crates/fuzzing/security-fuzzer",
    "crates/fuzzing/trident-fuzzer",
    "crates/fuzzing/fuzzdelsol",

    # ── Exploit / Red Team ───────────────────────────────────────────
    "crates/exploit/attack-simulator",
    "crates/exploit/transaction-forge",
    "crates/exploit/llm-strategist",

    # ── AI / LLM ─────────────────────────────────────────────────────
    "crates/ai/ai-enhancer",
    "crates/ai/consensus-engine",
    "crates/ai/secure-code-gen",

    # ── Infrastructure ───────────────────────────────────────────────
    "crates/infra/shanon-cli",
    "crates/infra/shanon-api",
    "crates/infra/shanon-lsp",
    "crates/infra/shanon-guard",
    "crates/infra/shanon-monitor",
    "crates/infra/shanon-verify",
    "crates/infra/firedancer-monitor",
    "crates/infra/compliance-reporter",
    "crates/infra/git-scanner",
    "crates/infra/benchmark-suite",
    "crates/infra/integration-orchestrator",

    # ── Solana Programs ──────────────────────────────────────────────
    "programs/shanon-oracle",
    "programs/vulnerable-vault",
    "programs/vulnerable-token",
    "programs/vulnerable-staking",

    # ── Tests ────────────────────────────────────────────────────────
    "exploits",
    "integration-tests",
]

default-members = [
    "crates/core/program-analyzer",
    "crates/infra/shanon-cli",
    "crates/infra/shanon-api",
    "crates/infra/shanon-guard",
    "crates/infra/shanon-monitor",
    "crates/infra/shanon-verify",
    "crates/infra/shanon-lsp",
    "crates/experts/token-security-expert",
    "crates/infra/firedancer-monitor",
    "crates/analyzers/cpi-analyzer",
    "crates/ai/ai-enhancer",
    "crates/infra/compliance-reporter",
    "programs/shanon-oracle",
    "programs/vulnerable-vault",
    "programs/vulnerable-token",
    "programs/vulnerable-staking",
    "exploits",
    "integration-tests",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Antigravity <agent@solana-security.com>"]

[workspace.lints.rust]
# Anchor macros inject cfg values (anchor-debug, solana, no-idl, etc.) that
# rustc doesn't recognise — suppress these warnings workspace-wide.
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(anchor_debug)',
    'cfg(solana)',
    'cfg(no_idl)',
    'cfg(no_log_ix_name)',
    'cfg(custom_heap)',
    'cfg(custom_panic)',
] }

[workspace.dependencies]
# Solana & Anchor
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
solana-sdk = "1.18"
# NOTE: solana-client v1.18.x triggers a future-incompatibility warning about
# never type fallback. Newer versions (2.x/3.x) exist but require a full Solana
# SDK migration (breaking API changes). This is a known upstream issue:
# https://github.com/solana-labs/solana — tracked via `cargo report future-incompatibilities`
solana-client = "1.18"
solana-program = "1.18"
solana-program-test = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Symbolic Execution
# z3 = { version = "0.12", features = ["static-link-z3"] }

# Rust Parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
walkdir = "2.4"
bs58 = "0.5"
sha2 = "0.10"
tera = "1.19"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
log = "0.4"
strsim = "0.11"
toml = "0.8"
semver = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Web framework
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
env_logger = "0.10"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true
