[package]
name = "compliance-reporter"
version.workspace = true
edition.workspace = true
description = "Maps Shanon security findings to compliance frameworks (SOC2, ISO27001, OWASP)"

[dependencies]
program-analyzer = { path = "../program-analyzer" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
