[package]
name = "fv-layer3-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
z3 = "0.12"
symbolic-engine = { path = "../symbolic-engine" }
syn = { workspace = true, features = ["full", "visit"] }
quote = { workspace = true }
walkdir = { workspace = true }
