[package]
name = "program-analyzer"
version = "0.2.0"
edition = "2021"
description = "AST-based security vulnerability analyzer for Solana/Anchor programs"
license = "MIT"
repository = "https://github.com/example/solana-security-platform"
keywords = ["solana", "security", "audit", "anchor", "vulnerability"]
categories = ["development-tools", "cryptography"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
colored = "2.0"
thiserror = "1.0"
toml = "0.8"
rayon = "1.8"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
once_cell = "1.19"
sec3-analyzer = { path = "../experimental/sec3-analyzer" }
anchor-security-analyzer = { path = "../experimental/anchor-security-analyzer" }
dataflow-analyzer = { path = "../experimental/dataflow-analyzer" }
taint-analyzer = { path = "../experimental/taint-analyzer" }
geiger-analyzer = { path = "../experimental/geiger-analyzer" }
arithmetic-security-expert = { path = "../experimental/arithmetic-security-expert" }
invariant-miner = { path = "../experimental/invariant-miner" }
l3x-analyzer = { path = "../experimental/l3x-analyzer" }
concolic-executor = { path = "../experimental/concolic-executor" }
security-fuzzer = { path = "../experimental/security-fuzzer" }
account-security-expert = { path = "../experimental/account-security-expert" }
defi-security-expert = { path = "../experimental/defi-security-expert" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analysis_benchmark"
harness = false

[[bench]]
name = "response_time"
harness = false