[package]
name = "proktor-oracle"
version = "0.1.0"
description = "Proktor Security Oracle — On-chain risk scores for Solana programs"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
