[package]
name = "vulnerable-vault"
version = "0.1.0"
edition = "2021"
publish = false
description = "Intentionally vulnerable vault program for security testing"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"

[lints]
workspace = true
