[package]
name = "crux-mir-analyzer"
version = "0.1.0"
edition = "2021"
description = "Crux-MIR symbolic simulator integration for Solana programs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
regex = "1.10"
chrono = "0.4"
tempfile = "3.10"
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
