[package]
name = "integration-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
walkdir.workspace = true