[package]
name = "proktor-lsp"
version.workspace = true
edition.workspace = true
description = "Proktor LSP Server — real-time Solana vulnerability highlighting in editors"

[[bin]]
name = "proktor-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
program-analyzer = { path = "../../core/program-analyzer" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
