[package]
name = "shanon-monitor"
version.workspace = true
edition.workspace = true
description = "Upgrade authority monitoring and alerting for Solana programs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
